# court-simulation

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  transcript_output.json
config/: config.yaml  marti_config.yaml
scripts/: build_chroma_index.py
src/chatree_deka/: cli.py  config.py  state.py
src/chatree_deka/agents/: base.py  defender_agent.py  evaluator_agent.py  judge_agent.py  plaintiff_agent.py  prosecutor_agent.py
src/chatree_deka/case-file/: output.json
src/chatree_deka/data_pipeline/: court_case_extraction_pipeline.py
src/chatree_deka/graph/: builder.py  edges.py
src/chatree_deka/graph/nodes/: advance_phase.py  defender.py  evaluator.py  judge.py  plaintiff.py  prosecutor.py  summary.py  validation.py
src/chatree_deka/io/: transcript_writer.py
src/chatree_deka/rag/: chroma_store.py  retriever.py
src/chatree_deka/validation/: checker.py  schemas.py
training/: environment.py  reward.py  train.py
